--- a/TyDtk/TyCommon.storyboard
+++ b/TyDtk/TyCommon.storyboard
@@ -186,6 +186,15 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginBrg.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="tYZ-Wg-MDu">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提示：密码只允许输入6~16位的数字、字母或两者的组合" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QbZ-P7-Ri1">
+                                <rect key="frame" x="40" y="360" width="295" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="eGI-EN-YQJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.63169070510000003" green="0.63169070510000003" blue="0.63169070510000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textField opaque="NO" clipsSubviews="YES" alpha="0.80000001192092896" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="kD0-NN-BcW">
                                 <rect key="frame" x="40" y="70" width="295" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -271,7 +280,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V0F-u9-GNB">
-                                <rect key="frame" x="148" y="365" width="80" height="25"/>
+                                <rect key="frame" x="148" y="400" width="80" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="UyO-W9-ms7"/>
                                     <constraint firstAttribute="width" constant="80" id="dnk-Pq-1GK"/>
@@ -289,6 +298,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="QbZ-P7-Ri1" firstAttribute="leading" secondItem="Qxk-IP-AF9" secondAttribute="leading" id="5k8-KN-tYC"/>
                             <constraint firstItem="vJm-G4-1Uy" firstAttribute="trailing" secondItem="kD0-NN-BcW" secondAttribute="trailing" id="64b-OZ-FIl"/>
                             <constraint firstItem="V0F-u9-GNB" firstAttribute="centerX" secondItem="XOW-cQ-RJB" secondAttribute="centerX" id="7FB-ca-urm"/>
                             <constraint firstItem="vJm-G4-1Uy" firstAttribute="leading" secondItem="SYI-v2-7TU" secondAttribute="trailing" constant="10" id="8s6-t8-1Hb"/>
@@ -305,15 +315,17 @@
                             <constraint firstAttribute="trailing" secondItem="Qxk-IP-AF9" secondAttribute="trailing" constant="40" id="TlR-uz-kul"/>
                             <constraint firstItem="Qxk-IP-AF9" firstAttribute="top" secondItem="WAV-an-z8g" secondAttribute="bottom" constant="30" id="UPS-Te-T1R"/>
                             <constraint firstItem="q2f-gc-xiy" firstAttribute="top" secondItem="tYZ-Wg-MDu" secondAttribute="bottom" id="UbN-Bg-cug"/>
-                            <constraint firstItem="V0F-u9-GNB" firstAttribute="top" secondItem="Qxk-IP-AF9" secondAttribute="bottom" constant="15" id="ZQW-uC-0W4"/>
+                            <constraint firstItem="V0F-u9-GNB" firstAttribute="top" secondItem="Qxk-IP-AF9" secondAttribute="bottom" constant="50" id="ZQW-uC-0W4"/>
                             <constraint firstItem="Gfc-1q-1Nn" firstAttribute="trailing" secondItem="kD0-NN-BcW" secondAttribute="trailing" id="aDL-Gz-qrf"/>
                             <constraint firstAttribute="trailing" secondItem="kD0-NN-BcW" secondAttribute="trailing" constant="40" id="aSx-kB-dnC"/>
                             <constraint firstItem="vJm-G4-1Uy" firstAttribute="top" secondItem="SYI-v2-7TU" secondAttribute="top" constant="5" id="cLY-HO-2om"/>
                             <constraint firstItem="WAV-an-z8g" firstAttribute="top" secondItem="SYI-v2-7TU" secondAttribute="bottom" constant="15" id="cSt-tf-4da"/>
                             <constraint firstItem="tYZ-Wg-MDu" firstAttribute="top" secondItem="3oh-Th-cGT" secondAttribute="bottom" id="f1g-te-5wC"/>
+                            <constraint firstItem="QbZ-P7-Ri1" firstAttribute="top" secondItem="Qxk-IP-AF9" secondAttribute="bottom" constant="10" id="ha1-Kg-aQC"/>
                             <constraint firstItem="Gfc-1q-1Nn" firstAttribute="leading" secondItem="kH3-m4-dWJ" secondAttribute="trailing" constant="10" id="lQq-wx-M90"/>
                             <constraint firstAttribute="trailing" secondItem="tYZ-Wg-MDu" secondAttribute="trailing" id="lYg-5v-1Wn"/>
                             <constraint firstItem="kD0-NN-BcW" firstAttribute="leading" secondItem="XOW-cQ-RJB" secondAttribute="leading" constant="40" id="mni-o3-atB"/>
+                            <constraint firstItem="QbZ-P7-Ri1" firstAttribute="trailing" secondItem="Qxk-IP-AF9" secondAttribute="trailing" id="quH-E1-LMQ"/>
                             <constraint firstAttribute="trailing" secondItem="WAV-an-z8g" secondAttribute="trailing" constant="40" id="r9P-Za-d4m"/>
                             <constraint firstItem="Qxk-IP-AF9" firstAttribute="leading" secondItem="XOW-cQ-RJB" secondAttribute="leading" constant="40" id="uSR-IT-quk"/>
                         </constraints>
@@ -411,9 +423,19 @@
                                     <action selector="registeButtonClick:" destination="grI-9A-bsH" eventType="touchUpInside" id="eIl-U5-eng"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提示：密码只允许输入6~16位的数字、字母或两者的组合" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YYI-p7-c6M">
+                                <rect key="frame" x="40" y="315" width="295" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="IOn-TU-S7n"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.63169070510000003" green="0.63169070510000003" blue="0.63169070510000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="YYI-p7-c6M" firstAttribute="trailing" secondItem="PvF-Uc-4zB" secondAttribute="trailing" id="4cR-GH-1aq"/>
                             <constraint firstItem="PvF-Uc-4zB" firstAttribute="leading" secondItem="jUp-tt-9L2" secondAttribute="leading" id="5pY-sZ-IHR"/>
                             <constraint firstAttribute="trailing" secondItem="usb-Vv-Q9E" secondAttribute="trailing" id="7LO-mk-w5g"/>
                             <constraint firstItem="EY5-VR-Ai7" firstAttribute="top" secondItem="Di2-T5-o7Z" secondAttribute="bottom" constant="20" id="7gq-hk-E4E"/>
@@ -427,6 +449,7 @@
                             <constraint firstItem="jUp-tt-9L2" firstAttribute="top" secondItem="4Wd-10-azT" secondAttribute="bottom" constant="50" id="QEh-Do-f6n"/>
                             <constraint firstAttribute="trailing" secondItem="jUp-tt-9L2" secondAttribute="trailing" constant="40" id="SRw-Zf-3Py"/>
                             <constraint firstItem="jUp-tt-9L2" firstAttribute="top" secondItem="ycW-te-Bca" secondAttribute="top" constant="200" id="V2R-gA-xqw"/>
+                            <constraint firstItem="YYI-p7-c6M" firstAttribute="leading" secondItem="PvF-Uc-4zB" secondAttribute="leading" id="Wrh-um-mm1"/>
                             <constraint firstItem="jUp-tt-9L2" firstAttribute="leading" secondItem="ycW-te-Bca" secondAttribute="leading" constant="40" id="YyK-Lq-RKP"/>
                             <constraint firstItem="usb-Vv-Q9E" firstAttribute="top" secondItem="ycW-te-Bca" secondAttribute="top" id="e1G-5E-kRJ"/>
                             <constraint firstItem="Di2-T5-o7Z" firstAttribute="leading" secondItem="jUp-tt-9L2" secondAttribute="leading" id="iQ3-YW-dbH"/>
@@ -435,6 +458,7 @@
                             <constraint firstItem="usb-Vv-Q9E" firstAttribute="leading" secondItem="ycW-te-Bca" secondAttribute="leading" id="qPe-ST-8nM"/>
                             <constraint firstItem="TQA-eT-lYr" firstAttribute="top" secondItem="usb-Vv-Q9E" secondAttribute="bottom" id="rmm-DO-kVP"/>
                             <constraint firstItem="73B-Gh-Hnh" firstAttribute="top" secondItem="jUp-tt-9L2" secondAttribute="bottom" constant="25" id="vlx-Bu-9IL"/>
+                            <constraint firstItem="YYI-p7-c6M" firstAttribute="top" secondItem="PvF-Uc-4zB" secondAttribute="bottom" constant="10" id="zga-6r-diu"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -637,6 +661,15 @@
                                     <action selector="buttonSubClick:" destination="gg4-YX-UUI" eventType="touchUpInside" id="mA2-77-406"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提示：密码只允许输入6~16位的数字、字母或两者的组合" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sDE-va-U1p">
+                                <rect key="frame" x="40" y="395" width="295" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="fJq-9f-Wpi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.63169070510000003" green="0.63169070510000003" blue="0.63169070510000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -646,11 +679,13 @@
                             <constraint firstItem="euP-Y0-9ub" firstAttribute="top" secondItem="jF5-hj-4aO" secondAttribute="bottom" constant="25" id="4ne-FT-EDW"/>
                             <constraint firstItem="heM-cx-TdU" firstAttribute="top" secondItem="F0C-4R-18l" secondAttribute="bottom" constant="15" id="4wh-jI-WAN"/>
                             <constraint firstItem="ttz-1m-QMX" firstAttribute="leading" secondItem="pMz-hg-129" secondAttribute="leading" id="7XK-U4-KuB"/>
+                            <constraint firstItem="sDE-va-U1p" firstAttribute="trailing" secondItem="CU2-cC-lJc" secondAttribute="trailing" id="8UP-UE-XsX"/>
                             <constraint firstItem="xSJ-NS-s6U" firstAttribute="top" secondItem="Iem-00-116" secondAttribute="bottom" id="By3-L9-Fb6"/>
                             <constraint firstItem="pMz-hg-129" firstAttribute="leading" secondItem="2f5-HE-tfM" secondAttribute="leading" constant="40" id="Dfs-pM-C9r"/>
                             <constraint firstItem="Vx8-Wd-1Jo" firstAttribute="top" secondItem="ttz-1m-QMX" secondAttribute="bottom" constant="15" id="FA6-et-bIw"/>
                             <constraint firstItem="CU2-cC-lJc" firstAttribute="leading" secondItem="pMz-hg-129" secondAttribute="leading" id="HVQ-O8-sru"/>
                             <constraint firstItem="CU2-cC-lJc" firstAttribute="top" secondItem="heM-cx-TdU" secondAttribute="bottom" constant="30" id="IrZ-dF-sgf"/>
+                            <constraint firstItem="sDE-va-U1p" firstAttribute="top" secondItem="CU2-cC-lJc" secondAttribute="bottom" constant="10" id="MQr-ba-ttS"/>
                             <constraint firstItem="CU2-cC-lJc" firstAttribute="trailing" secondItem="pMz-hg-129" secondAttribute="trailing" id="PbA-EI-Yqt"/>
                             <constraint firstItem="F0C-4R-18l" firstAttribute="trailing" secondItem="pMz-hg-129" secondAttribute="trailing" id="S6M-lO-TbU"/>
                             <constraint firstItem="F0C-4R-18l" firstAttribute="top" secondItem="Vx8-Wd-1Jo" secondAttribute="bottom" constant="15" id="UzT-vS-eqm"/>
@@ -661,6 +696,7 @@
                             <constraint firstItem="Vx8-Wd-1Jo" firstAttribute="leading" secondItem="pMz-hg-129" secondAttribute="leading" id="i3G-J8-2OE"/>
                             <constraint firstAttribute="trailing" secondItem="pMz-hg-129" secondAttribute="trailing" constant="40" id="jO6-Ct-poE"/>
                             <constraint firstItem="euP-Y0-9ub" firstAttribute="leading" secondItem="Vx8-Wd-1Jo" secondAttribute="trailing" constant="10" id="qxE-sX-Xhm"/>
+                            <constraint firstItem="sDE-va-U1p" firstAttribute="leading" secondItem="CU2-cC-lJc" secondAttribute="leading" id="rpE-E4-kJN"/>
                             <constraint firstAttribute="trailing" secondItem="Iem-00-116" secondAttribute="trailing" id="tCB-pE-VP9"/>
                             <constraint firstItem="jF5-hj-4aO" firstAttribute="leading" secondItem="ttz-1m-QMX" secondAttribute="trailing" constant="10" id="tQZ-ZH-dkS"/>
                             <constraint firstItem="F0C-4R-18l" firstAttribute="leading" secondItem="pMz-hg-129" secondAttribute="leading" id="tYW-au-hki"/>
@@ -1512,6 +1548,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="tableViewIn" destination="ktC-Qi-Kqf" id="o2l-Ke-UY0"/>
+                        <outlet property="tableViewTopLaout" destination="iNr-Sp-FOG" id="HrR-AS-Hnq"/>
                         <segue destination="dbs-DQ-tMd" kind="show" identifier="strtopic" id="Cnp-rZ-Spx"/>
                     </connections>
                 </viewController>
@@ -2034,7 +2071,7 @@
         <image name="top_backbtn" width="12" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="t9q-ND-zPo"/>
+        <segue reference="Cnp-rZ-Spx"/>
         <segue reference="3TO-hV-wL9"/>
     </inferredMetricsTieBreakers>
 </document>
