--- a/TyDtk/TyDTK.storyboard
+++ b/TyDtk/TyDTK.storyboard
@@ -193,7 +193,7 @@
                                 <rect key="frame" x="120" y="64" width="255" height="603"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="J9o-56-nSz">
-                                    <size key="itemSize" width="231" height="133"/>
+                                    <size key="itemSize" width="238" height="133"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -204,38 +204,38 @@
                                 </imageView>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="sscell" id="a9V-jx-UnB">
-                                        <rect key="frame" x="12" y="0.0" width="231" height="133"/>
+                                        <rect key="frame" x="9" y="0.0" width="238" height="133"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="231" height="133"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="238" height="133"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="10" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aL9-si-wgo">
-                                                    <rect key="frame" x="2" y="35" width="139" height="96"/>
+                                                    <rect key="frame" x="2" y="35" width="146" height="96"/>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kMt-p4-tGI">
-                                                    <rect key="frame" x="144" y="45" width="1" height="78"/>
+                                                    <rect key="frame" x="151" y="45" width="1" height="78"/>
                                                     <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="1" id="OXK-IX-Zy6"/>
                                                     </constraints>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="km_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="4aO-za-xlo">
-                                                    <rect key="frame" x="148" y="55" width="10" height="10"/>
+                                                    <rect key="frame" x="155" y="55" width="10" height="10"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="10" id="7cH-j8-lLw"/>
                                                         <constraint firstAttribute="width" constant="10" id="BFo-gw-iH2"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="q5l-wL-U0l">
-                                                    <rect key="frame" x="148" y="103" width="10" height="10"/>
+                                                    <rect key="frame" x="155" y="103" width="10" height="10"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="10" id="ESF-AO-cXg"/>
                                                         <constraint firstAttribute="width" constant="10" id="JPE-zo-Zce"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w87-9C-LQh">
-                                                    <rect key="frame" x="160" y="52" width="71" height="15"/>
+                                                    <rect key="frame" x="167" y="52" width="71" height="15"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="15" id="ohy-Ty-KBr"/>
                                                     </constraints>
@@ -244,7 +244,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="12" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ANw-SI-fK6">
-                                                    <rect key="frame" x="160" y="101" width="71" height="15"/>
+                                                    <rect key="frame" x="167" y="101" width="71" height="15"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="15" id="MaB-ea-eta"/>
                                                     </constraints>
@@ -253,7 +253,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="14" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vm8-eo-eMh">
-                                                    <rect key="frame" x="5" y="5" width="216" height="25"/>
+                                                    <rect key="frame" x="5" y="5" width="223" height="25"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.17333487149999999" green="0.48470761289999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -324,11 +324,65 @@
                         <segue destination="Nh7-Ch-AlH" kind="show" identifier="subjectin" id="sKX-ln-n2I">
                             <nil key="action"/>
                         </segue>
+                        <segue destination="qGP-kY-BZb" kind="show" identifier="test" id="E3a-sP-WYo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zdp-rz-7av" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-807.5" y="-558.5"/>
+        </scene>
+        <!--Test Center View Controller-->
+        <scene sceneID="J3j-XL-GGl">
+            <objects>
+                <viewController id="qGP-kY-BZb" customClass="TestCenterViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="x3i-8l-6fv"/>
+                        <viewControllerLayoutGuide type="bottom" id="TAC-gi-wjz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="beZ-0u-3Jf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="aFH-RC-IZU">
+                                <rect key="frame" x="15" y="74" width="345" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Sh2-tY-F5s"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="章节练习"/>
+                                    <segment title="模拟试卷"/>
+                                    <segment title="每周精选"/>
+                                    <segment title="智能做题"/>
+                                </segments>
+                                <color key="tintColor" red="0.53419471153846154" green="0.53419471153846154" blue="0.53419471153846154" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectTopicModelClick:" destination="qGP-kY-BZb" eventType="valueChanged" id="vJf-HH-xDN"/>
+                                </connections>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aFH-RC-IZU" firstAttribute="top" secondItem="x3i-8l-6fv" secondAttribute="bottom" constant="10" id="6yF-3w-56U"/>
+                            <constraint firstAttribute="trailing" secondItem="aFH-RC-IZU" secondAttribute="trailing" constant="15" id="Y0Z-4C-Zt5"/>
+                            <constraint firstItem="aFH-RC-IZU" firstAttribute="leading" secondItem="beZ-0u-3Jf" secondAttribute="leading" constant="15" id="e0V-jp-Imz"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="tdt-bC-WyH">
+                        <barButtonItem key="leftBarButtonItem" image="top_backbtn" id="45M-eP-5ff">
+                            <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="btnLiftItemClick:" destination="qGP-kY-BZb" id="MNO-HL-lmF"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="segmentShowText" destination="aFH-RC-IZU" id="8Ir-bq-JJv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bae-mt-muJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-807.5" y="243.5"/>
         </scene>
         <!--Subject Info View Controller-->
         <scene sceneID="1j4-dh-KLf">
