--- a/TyDtk/TyDTK.storyboard
+++ b/TyDtk/TyDTK.storyboard
@@ -343,28 +343,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="aFH-RC-IZU">
-                                <rect key="frame" x="15" y="74" width="345" height="31"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DmU-oE-ZYc">
+                                <rect key="frame" x="0.0" y="64" width="375" height="40"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kC0-GB-u3B">
+                                        <rect key="frame" x="0.0" y="39" width="375" height="1"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="eFn-aC-F4A"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PlG-kI-Jb1">
+                                        <rect key="frame" x="0.0" y="0.0" width="94" height="39"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal" title="章节练习">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnSelectTopicModelClick:" destination="qGP-kY-BZb" eventType="touchUpInside" id="Hq9-hr-pwS"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2J6-jc-rgf">
+                                        <rect key="frame" x="94" y="0.0" width="94" height="39"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal" title="模拟试卷">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnSelectTopicModelClick:" destination="qGP-kY-BZb" eventType="touchUpInside" id="Rru-hZ-qOg"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1vz-O1-fRC">
+                                        <rect key="frame" x="188" y="0.0" width="93" height="39"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal" title="每周精选">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnSelectTopicModelClick:" destination="qGP-kY-BZb" eventType="touchUpInside" id="4I4-JU-Eut"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="13" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xI8-C6-RKl">
+                                        <rect key="frame" x="281" y="0.0" width="94" height="39"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal" title="智能做题">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnSelectTopicModelClick:" destination="qGP-kY-BZb" eventType="touchUpInside" id="otL-U8-TlR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Sh2-tY-F5s"/>
+                                    <constraint firstAttribute="bottom" secondItem="kC0-GB-u3B" secondAttribute="bottom" id="0LJ-f1-ktX"/>
+                                    <constraint firstItem="2J6-jc-rgf" firstAttribute="leading" secondItem="PlG-kI-Jb1" secondAttribute="trailing" id="1Y1-cb-LyM"/>
+                                    <constraint firstItem="xI8-C6-RKl" firstAttribute="leading" secondItem="1vz-O1-fRC" secondAttribute="trailing" id="2YD-Ll-xrB"/>
+                                    <constraint firstItem="kC0-GB-u3B" firstAttribute="top" secondItem="PlG-kI-Jb1" secondAttribute="bottom" id="9Gr-Kb-H0K"/>
+                                    <constraint firstItem="1vz-O1-fRC" firstAttribute="width" secondItem="PlG-kI-Jb1" secondAttribute="width" id="BrU-kh-13j"/>
+                                    <constraint firstItem="1vz-O1-fRC" firstAttribute="leading" secondItem="2J6-jc-rgf" secondAttribute="trailing" id="DGl-Dm-NFM"/>
+                                    <constraint firstItem="PlG-kI-Jb1" firstAttribute="leading" secondItem="DmU-oE-ZYc" secondAttribute="leading" id="EGy-d9-vHY"/>
+                                    <constraint firstItem="kC0-GB-u3B" firstAttribute="leading" secondItem="DmU-oE-ZYc" secondAttribute="leading" id="GyV-Fm-6qm"/>
+                                    <constraint firstAttribute="trailing" secondItem="xI8-C6-RKl" secondAttribute="trailing" id="Nd0-RY-7XJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="kC0-GB-u3B" secondAttribute="trailing" id="SbO-HV-XrR"/>
+                                    <constraint firstItem="2J6-jc-rgf" firstAttribute="width" secondItem="PlG-kI-Jb1" secondAttribute="width" id="XF5-9s-KzI"/>
+                                    <constraint firstItem="xI8-C6-RKl" firstAttribute="width" secondItem="PlG-kI-Jb1" secondAttribute="width" id="bZa-N3-lyc"/>
+                                    <constraint firstItem="PlG-kI-Jb1" firstAttribute="top" secondItem="DmU-oE-ZYc" secondAttribute="top" id="cj6-T2-k5h"/>
+                                    <constraint firstAttribute="height" constant="40" id="gxh-DF-QmY"/>
+                                    <constraint firstItem="xI8-C6-RKl" firstAttribute="top" secondItem="DmU-oE-ZYc" secondAttribute="top" id="ijl-Yn-2z0"/>
+                                    <constraint firstItem="2J6-jc-rgf" firstAttribute="top" secondItem="DmU-oE-ZYc" secondAttribute="top" id="jWz-EY-RNU"/>
+                                    <constraint firstItem="kC0-GB-u3B" firstAttribute="top" secondItem="1vz-O1-fRC" secondAttribute="bottom" id="sAo-0s-cM5"/>
+                                    <constraint firstItem="kC0-GB-u3B" firstAttribute="top" secondItem="2J6-jc-rgf" secondAttribute="bottom" id="wsN-em-dBR"/>
+                                    <constraint firstItem="kC0-GB-u3B" firstAttribute="top" secondItem="xI8-C6-RKl" secondAttribute="bottom" id="x1U-T5-Vc3"/>
+                                    <constraint firstItem="1vz-O1-fRC" firstAttribute="top" secondItem="DmU-oE-ZYc" secondAttribute="top" id="zsu-6Y-Kru"/>
                                 </constraints>
-                                <segments>
-                                    <segment title="章节练习"/>
-                                    <segment title="模拟试卷"/>
-                                    <segment title="每周精选"/>
-                                    <segment title="智能做题"/>
-                                </segments>
-                                <color key="tintColor" red="0.53419471153846154" green="0.53419471153846154" blue="0.53419471153846154" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="selectTopicModelClick:" destination="qGP-kY-BZb" eventType="valueChanged" id="vJf-HH-xDN"/>
-                                </connections>
-                            </segmentedControl>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="aFH-RC-IZU" firstAttribute="top" secondItem="x3i-8l-6fv" secondAttribute="bottom" constant="10" id="6yF-3w-56U"/>
-                            <constraint firstAttribute="trailing" secondItem="aFH-RC-IZU" secondAttribute="trailing" constant="15" id="Y0Z-4C-Zt5"/>
-                            <constraint firstItem="aFH-RC-IZU" firstAttribute="leading" secondItem="beZ-0u-3Jf" secondAttribute="leading" constant="15" id="e0V-jp-Imz"/>
+                            <constraint firstItem="DmU-oE-ZYc" firstAttribute="leading" secondItem="beZ-0u-3Jf" secondAttribute="leading" id="3Fp-67-25l"/>
+                            <constraint firstAttribute="trailing" secondItem="DmU-oE-ZYc" secondAttribute="trailing" id="PnH-e3-ZDz"/>
+                            <constraint firstItem="DmU-oE-ZYc" firstAttribute="top" secondItem="x3i-8l-6fv" secondAttribute="bottom" id="hzj-0t-kkh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tdt-bC-WyH">
@@ -377,12 +436,31 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="segmentShowText" destination="aFH-RC-IZU" id="8Ir-bq-JJv"/>
+                        <outlet property="heardView" destination="DmU-oE-ZYc" id="3CZ-vJ-WKe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bae-mt-muJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-807.5" y="243.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="x4c-rd-RDT">
+            <objects>
+                <viewController id="AW5-8W-XEg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gqe-XW-9kx"/>
+                        <viewControllerLayoutGuide type="bottom" id="eP7-dU-QTb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eWj-sT-r5e">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y3l-Q3-z8O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-314.5" y="243.5"/>
         </scene>
         <!--Subject Info View Controller-->
         <scene sceneID="1j4-dh-KLf">
