--- a/TyDtk/TyCommon.storyboard
+++ b/TyDtk/TyCommon.storyboard
@@ -2087,7 +2087,7 @@
         <image name="top_backbtn" width="12" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="t9q-ND-zPo"/>
+        <segue reference="5XK-db-80A"/>
         <segue reference="3TO-hV-wL9"/>
     </inferredMetricsTieBreakers>
 </document>
