--- a/TyDtk/TyCommon.storyboard
+++ b/TyDtk/TyCommon.storyboard
@@ -97,13 +97,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="72e-2S-Sdr">
-                                <rect key="frame" x="270" y="270" width="75" height="20"/>
+                                <rect key="frame" x="275" y="270" width="70" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="euY-nr-qDL"/>
-                                    <constraint firstAttribute="width" constant="75" id="ij8-bC-mEH"/>
+                                    <constraint firstAttribute="width" constant="70" id="ij8-bC-mEH"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="免费注册">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="0.24081095429999999" green="0.64520547120000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="3pN-nS-mQ7" kind="show" id="B3r-NE-pAp">
@@ -112,13 +113,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ye1-UK-Fj0">
-                                <rect key="frame" x="30" y="270" width="80" height="20"/>
+                                <rect key="frame" x="30" y="270" width="70" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="HnP-hH-snq"/>
+                                    <constraint firstAttribute="width" constant="70" id="HnP-hH-snq"/>
                                     <constraint firstAttribute="height" constant="20" id="Lkn-nE-fk5"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="忘记密码?">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="0.24081095429999999" green="0.64520547120000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="L6C-vw-7jS" kind="show" id="ct3-jy-PAa">
@@ -1585,7 +1587,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="136" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="39U-JM-SDq">
-                                <rect key="frame" x="0.0" y="45" width="375" height="622"/>
+                                <rect key="frame" x="0.0" y="40" width="375" height="627"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell1" rowHeight="135" id="lD4-eO-lZT" customClass="ExerciseTableViewCell">
@@ -1698,94 +1700,18 @@
                                     <outlet property="delegate" destination="RAm-jL-jKN" id="UQY-3d-J2b"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jNe-yc-LB6">
-                                <rect key="frame" x="0.0" y="20" width="375" height="45"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="科目&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVk-ea-rKE">
-                                        <rect key="frame" x="10" y="13" width="36" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="36" id="doZ-Pj-RqR"/>
-                                            <constraint firstAttribute="height" constant="20" id="zVj-Ix-dmo"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yZc-zR-poC">
-                                        <rect key="frame" x="310" y="8" width="55" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="WR2-Pq-Bcf"/>
-                                            <constraint firstAttribute="width" constant="55" id="xZe-ib-UZJ"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <state key="normal">
-                                            <color key="titleColor" red="0.88441506410000004" green="0.51448702260000001" blue="0.1141335103" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonTypeClick:" destination="RAm-jL-jKN" eventType="touchUpInside" id="nCa-ET-Frt"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a7F-8Y-Yop">
-                                        <rect key="frame" x="46" y="8" width="201" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="RBO-5H-nHe"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <state key="normal">
-                                            <color key="titleColor" red="0.88441506410000004" green="0.51448702260000001" blue="0.1141335103" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonSubjectClick:" destination="RAm-jL-jKN" eventType="touchUpInside" id="v7q-a2-zgw"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="做题模式&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94U-X4-RHc">
-                                        <rect key="frame" x="252" y="13" width="58" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="WRH-iQ-NLg"/>
-                                            <constraint firstAttribute="width" constant="58" id="YOn-Ga-FbA"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="yZc-zR-poC" firstAttribute="centerY" secondItem="jNe-yc-LB6" secondAttribute="centerY" id="3bm-F0-Q9S"/>
-                                    <constraint firstItem="yZc-zR-poC" firstAttribute="leading" secondItem="94U-X4-RHc" secondAttribute="trailing" id="CiG-nn-Gwg"/>
-                                    <constraint firstItem="a7F-8Y-Yop" firstAttribute="leading" secondItem="IVk-ea-rKE" secondAttribute="trailing" id="DEV-Zy-tzs"/>
-                                    <constraint firstItem="IVk-ea-rKE" firstAttribute="centerY" secondItem="jNe-yc-LB6" secondAttribute="centerY" id="EKI-ZV-EDl"/>
-                                    <constraint firstAttribute="height" constant="45" id="I0Q-c4-0L9"/>
-                                    <constraint firstItem="94U-X4-RHc" firstAttribute="leading" secondItem="a7F-8Y-Yop" secondAttribute="trailing" constant="5" id="UXT-5s-OOw"/>
-                                    <constraint firstItem="IVk-ea-rKE" firstAttribute="leading" secondItem="jNe-yc-LB6" secondAttribute="leading" constant="10" id="VTI-B9-PE6"/>
-                                    <constraint firstItem="a7F-8Y-Yop" firstAttribute="centerY" secondItem="jNe-yc-LB6" secondAttribute="centerY" id="amd-U6-jyn"/>
-                                    <constraint firstAttribute="trailing" secondItem="yZc-zR-poC" secondAttribute="trailing" constant="10" id="nTJ-ed-bQ5"/>
-                                    <constraint firstItem="94U-X4-RHc" firstAttribute="centerY" secondItem="jNe-yc-LB6" secondAttribute="centerY" id="yFY-Zx-QYZ"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="jNe-yc-LB6" secondAttribute="trailing" id="25b-13-Jt7"/>
-                            <constraint firstItem="k1d-gZ-0Ae" firstAttribute="top" secondItem="39U-JM-SDq" secondAttribute="bottom" id="Njq-v7-UsA"/>
-                            <constraint firstItem="jNe-yc-LB6" firstAttribute="leading" secondItem="h6P-9Q-53T" secondAttribute="leading" id="WAG-Sp-Pdy"/>
                             <constraint firstAttribute="bottom" secondItem="39U-JM-SDq" secondAttribute="bottom" id="XvM-UF-ruo"/>
-                            <constraint firstItem="jNe-yc-LB6" firstAttribute="top" secondItem="lXh-fe-dNM" secondAttribute="bottom" id="la5-Mb-RZk"/>
                             <constraint firstItem="39U-JM-SDq" firstAttribute="leading" secondItem="h6P-9Q-53T" secondAttribute="leading" id="pHP-G2-tMO"/>
                             <constraint firstAttribute="trailing" secondItem="39U-JM-SDq" secondAttribute="trailing" id="t1x-tB-tB8"/>
-                            <constraint firstItem="39U-JM-SDq" firstAttribute="top" secondItem="h6P-9Q-53T" secondAttribute="top" constant="45" id="x5r-Jg-Ex5"/>
+                            <constraint firstItem="39U-JM-SDq" firstAttribute="top" secondItem="h6P-9Q-53T" secondAttribute="top" constant="40" id="x5r-Jg-Ex5"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Njq-v7-UsA"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="做题记录" id="wDG-Kk-9t8"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="buttonSubject" destination="a7F-8Y-Yop" id="FBJ-dw-xV3"/>
-                        <outlet property="buttonTypeTopic" destination="yZc-zR-poC" id="bjL-0t-Azk"/>
                         <outlet property="tableViewRe" destination="39U-JM-SDq" id="dSP-pp-0fa"/>
                         <segue destination="dbs-DQ-tMd" kind="show" identifier="startDoTopic" id="5ot-CK-4YJ">
                             <nil key="action"/>
@@ -2087,7 +2013,7 @@
         <image name="top_backbtn" width="12" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5XK-db-80A"/>
-        <segue reference="3TO-hV-wL9"/>
+        <segue reference="5ot-CK-4YJ"/>
+        <segue reference="Qot-Ol-gXn"/>
     </inferredMetricsTieBreakers>
 </document>
