--- a/TyDtk/TyLearn.storyboard
+++ b/TyDtk/TyLearn.storyboard
@@ -5,6 +5,25 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="moH-hC-4w1">
+            <objects>
+                <viewController storyboardIdentifier="333333" id="4MO-Mv-Wtk" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="deq-84-TCu"/>
+                        <viewControllerLayoutGuide type="bottom" id="g5v-6p-qoz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rBE-9f-G3J">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1lk-SE-7wd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2147.5" y="163.5"/>
+        </scene>
         <!--练习中心-->
         <scene sceneID="NxL-67-ctV">
             <objects>
