--- a/TyDtk/TyDTK.storyboard
+++ b/TyDtk/TyDTK.storyboard
@@ -348,7 +348,7 @@
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kC0-GB-u3B">
                                         <rect key="frame" x="0.0" y="39" width="375" height="1"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="eFn-aC-F4A"/>
                                         </constraints>
